# PhishGuard_AI_BackEnd_Flask

./: (.env.example)  .gitignore  FLASK_SCANNER_README.md  LICENSE  README.md  README_ML.md  app.db  app.db-shm  app.db-wal  flask_requirements.txt  flask_scanner_app.py  pyproject.toml  render.yaml  requirements.txt  sample_dataset.csv  test_scanner_api.py
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
data/: dataset.csv
models/: random_forest_model.pkl  tfidf_vectorizer.pkl
